// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT: <ProductCard /> should match component's defaultProps snapshot 1`] = `
Object {
  "className": null,
  "currency": "R$",
  "isNew": false,
  "isWishlisted": false,
}
`;

exports[`COMPONENT: <ProductCard /> should match component's propTypes snapshot 1`] = `
Object {
  "brand": [Function],
  "className": [Function],
  "classes": [Function],
  "currency": [Function],
  "id": [Function],
  "imgUrl": [Function],
  "isNew": [Function],
  "isWishlisted": [Function],
  "name": [Function],
  "price": [Function],
  "toggleIsWishlisted": [Function],
}
`;

exports[`COMPONENT: <ProductCard /> should match component's snapshot 1`] = `
<div
  className="ProductCard-productCard ProductCard-productCard"
>
  <div
    className="ProductCard-imgContainer ProductCard-imgContainer"
  >
    <div
      className="ProductCard-img ProductCard-img"
    >
      <Jss(SvgIcon)
        className="ProductCard-wishlistButton ProductCard-wishlistButton"
        color="#808080"
        height={20}
        onClick={[Function]}
        src=""
        width={20}
      />
    </div>
  </div>
  <div
    className="ProductCard-description ProductCard-description"
  >
    <div>
      <div
        className="ProductCard-brand ProductCard-brand"
      >
        Nike
      </div>
      <div
        className="ProductCard-name ProductCard-name"
      >
        Legend 2.0 Long Sleeve
      </div>
    </div>
    <div
      className="ProductCard-price ProductCard-price"
    >
      R$
      24.99
    </div>
  </div>
</div>
`;

exports[`COMPONENT: <ProductCard /> should match component's snapshot with optional props 1`] = `
<div
  className="ProductCard-productCard ProductCard-productCard"
>
  <div
    className="ProductCard-imgContainer ProductCard-imgContainer"
  >
    <div
      className="ProductCard-img ProductCard-img"
    >
      <Jss(SvgIcon)
        className="ProductCard-wishlistButton ProductCard-wishlistButton wishlisted"
        color="#ff5454"
        height={20}
        onClick={[Function]}
        src=""
        width={20}
      />
      <div
        className="ProductCard-newProduct ProductCard-newProduct"
      >
        New
      </div>
    </div>
  </div>
  <div
    className="ProductCard-description ProductCard-description"
  >
    <div>
      <div
        className="ProductCard-brand ProductCard-brand"
      >
        Nike
      </div>
      <div
        className="ProductCard-name ProductCard-name"
      >
        Legend 2.0 Long Sleeve
      </div>
    </div>
    <div
      className="ProductCard-price ProductCard-price"
    >
      R$
      24.99
    </div>
  </div>
</div>
`;

exports[`COMPONENT: <ProductCard /> should match component's style snapshot 1`] = `
Object {
  "brand": Object {
    "color": "#585858",
    "fontFamily": "Montserrat",
    "fontSize": 14,
    "fontWeight": 500,
    "textTransform": "uppercase",
  },
  "description": Object {
    "display": "flex",
    "justifyContent": "space-between",
    "padding": 14,
  },
  "img": Object {
    "backgroundImage": [Function],
    "backgroundPosition": "center",
    "backgroundRepeat": "no-repeat",
    "backgroundSize": "contain",
    "display": "flex",
    "height": 260,
    "justifyContent": "space-between",
    "width": 260,
  },
  "imgContainer": Object {
    "alignItems": "center",
    "display": "flex",
    "height": 280,
    "justifyContent": "center",
    "width": 280,
  },
  "name": Object {
    "color": "#646464",
    "fontSize": 12,
    "fontWeight": 300,
    "height": 16,
    "marginTop": 4,
    "overflow": "hidden",
    "textOverflow": "ellipsis",
    "whiteSpace": "nowrap",
    "width": 160,
  },
  "newProduct": Object {
    "alignItems": "flex-end",
    "background": "#fff2f2",
    "boxSizing": "border-box",
    "color": "#d0011b",
    "display": "flex",
    "fontSize": 12,
    "fontWeight": 500,
    "height": 90,
    "justifyContent": "center",
    "margin": -61,
    "paddingBottom": 6,
    "transform": "rotate(45deg)",
    "userSelect": "none",
    "width": 90,
  },
  "price": Object {
    "color": "#585858",
    "fontSize": 14,
    "fontWeight": 400,
    "marginRight": 6,
  },
  "productCard": Object {
    "&:hover": Object {
      "boxShadow": "0px 30px 50px rgba(0,0,0,0.15)",
    },
    "&:hover $wishlistButton": Object {
      "visibility": "visible !important",
    },
    "background": "#ffffff",
    "height": 344,
    "overflow": "hidden",
    "transition": "box-shadow 0.3s ease-in-out",
    "width": 280,
  },
  "wishlistButton": Object {
    "&.wishlisted": Object {
      "visibility": "visible !important",
    },
    "&:hover": Object {
      "transform": "scale(1.2,1.2)",
    },
    "cursor": "pointer",
    "marginLeft": 8,
    "marginTop": 10,
    "transition": "transform 180ms",
    "transitionTimingFunction": "cubic-bezier(.2,.7,.8,.7)",
    "visibility": "hidden",
  },
}
`;
